--- a/test/index.html
+++ b/test/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport"
 		content="initial-scale=1.0, width=device-width, height=device-height, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no" />
+	<link rel="stylesheet" type="text/css" href="resources/vars.css">
 	<link rel="stylesheet" type="text/css" href="resources/base.css">
 	<link rel="stylesheet" type="text/css" href="resources/menu.css">
 	<script type='text/javascript' src='./code/muzxbox.js'></script>
@@ -19,7 +20,11 @@
 	<svg id="contentSVG" class='contentSVG' viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"
 		xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
 		<g id='backgroundLayerGroup'></g>
+		<g id='bottomScaleLayerGroup'></g>
+		<g id='leftScaleLayerGroup'></g>
 		<g id='foregroundLayerGroup'></g>
+		<g id='selectionLayerGroup'></g>
+		<g id='menuLayerGroup'></g>
 	</svg>
 	<div id='menuDiv1' class='mainmenu' onclick='MuzXBox.closeMenu();'>
 		<div id="mydiv">
