--- a/test/index.html
+++ b/test/index.html
@@ -77,9 +77,9 @@
 	<script>
 		function waitMBx(){
 			console.log('waitMBx');
-			if(window['MuzXBox']){
+			if(window['MZXB']){
 				console.log(MuzXBox);
-				MuzXBox.initAll();
+				MZXB.initAll();
 			}else{
 				setTimeout(waitMBx,333);
 			}
