--- a/test/index.html
+++ b/test/index.html
@@ -19,12 +19,11 @@
 	-->
 	<svg id="contentSVG" class='contentSVG' viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"
 		xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
-		<g id='backgroundLayerGroup'></g>
-		<g id='gridLayerGroup'></g>
-		<g id='otherContentLayerGroup'></g>
-		<g id='subContentLayerGroup'></g>
-		<g id='activeContentLayerGroup'></g>
-		<g id='foregroundLayerGroup'></g>
+		<g id='bottomTimelineLayerGroup'></g>
+		<g id='measureOtherVoicesLayerGroup'></g>
+		<g id='measureSecondVoicesLayerGroup'></g>
+		<g id='measureMainVoiceLayerGroup'></g>
+		<g id='debugLayerGroup'></g>
 	</svg>
 	<div id='menuDiv1' class='mainmenu' onclick='MuzXBox.closeMenu();'>
 		<div id="mydiv">
