--- a/test/index.html
+++ b/test/index.html
@@ -25,6 +25,7 @@
 		<g id='measureMainVoiceLayerGroup'></g>
 		<g id='debugLayerGroup'></g>
 	</svg>
+	<!--
 	<div id='menuDiv1' class='mainmenu' onclick='MuzXBox.closeMenu();'>
 		<div id="mydiv">
 			<div id="mydivheader"></div>
@@ -73,6 +74,108 @@
 
 		</div>
 	</div>
+-->
+	<div id='menuButtonDiv'>
+		<img id='menuButtonImage' src="resources/y_button.svg" onclick="MZXB.zInputDeviceHandler.processKeyY();" />
+		<!--
+		<img id='menuButtonImage' src="resources/x_button.svg" onclick="MZXB.zInputDeviceHandler.processKeyY();" />
+		<img id='menuButtonImage' src="resources/a_button.svg" onclick="MZXB.zInputDeviceHandler.processKeyY();" />
+		<img id='menuButtonImage' src="resources/b_button.svg" onclick="MZXB.zInputDeviceHandler.processKeyY();" />
+		<img id='menuButtonImage' src="resources/left_button.svg" onclick="MZXB.zInputDeviceHandler.processKeyY();" />
+		<img id='menuButtonImage' src="resources/up_button.svg" onclick="MZXB.zInputDeviceHandler.processKeyY();" />
+		<img id='menuButtonImage' src="resources/down_button.svg" onclick="MZXB.zInputDeviceHandler.processKeyY();" />
+		<img id='menuButtonImage' src="resources/right_button.svg" onclick="MZXB.zInputDeviceHandler.processKeyY();" />
+		<img id='menuButtonImage' src="resources/minus_button.svg" onclick="MZXB.zInputDeviceHandler.processKeyY();" />
+		<img id='menuButtonImage' src="resources/plus_button.svg" onclick="MZXB.zInputDeviceHandler.processKeyY();" />
+		-->
+	</div>
+	
+	<div id='menuPaneDiv1' class='menuPane'>
+		<div class='menuHead' onclick="MZXB.zInputDeviceHandler.processKeyB();">
+			header for return back action
+		</div>
+		<div class='menuContent'>
+			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+				1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
+			</div>
+			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+				dthndrt jdtym dtym dtymdtym
+			</div>
+			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+				sdsgn xsssrt saa aaa re
+			</div>
+		</div>
+	</div>
+
+	<div id='menuPaneDiv2' class='menuPane'>
+		<div class='menuHead' onclick="MZXB.zInputDeviceHandler.processKeyB();">
+			header for return back action
+		</div>
+		<div class='menuContent'>
+			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+				xnrndty mt mtym 
+			</div>
+			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+				e6uj56eje56j56e w45mdtym
+			</div>
+			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+				w4y4w6yu4ew6j6j64
+			</div>
+		</div>
+	</div>
+
+	<div id='menuPaneDiv3' class='menuPane'>
+		<div class='menuHead' onclick="MZXB.zInputDeviceHandler.processKeyB();">
+			header for return back action
+		</div>
+		<div class='menuContent'>
+			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+				xnrndty mt mtym 
+			</div>
+			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+				e6uj56eje56j56e w45mdtym
+			</div>
+			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+				w4y4w6yu4ew6j6j64
+			</div>
+		</div>
+	</div>
+
+	<div id='menuPaneDiv4' class='menuPane'>
+		<div class='menuHead' onclick="MZXB.zInputDeviceHandler.processKeyB();">
+			header for return back action
+		</div>
+		<div class='menuContent'>
+			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+				xnrndty mt mtym 
+			</div>
+			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+				e6uj56eje56j56e w45mdtym
+			</div>
+			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+				w4y4w6yu4ew6j6j64
+			</div>
+		</div>
+	</div>
+
+	<div id='menuPaneDiv5' class='menuPane'>
+		<div class='menuHead' onclick="MZXB.zInputDeviceHandler.processKeyB();">
+			header for return back action
+		</div>
+		<div class='menuContent'>
+			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+				xnrndty mt mtym 
+			</div>
+			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+				e6uj56eje56j56e w45mdtym
+			</div>
+			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+				w4y4w6yu4ew6j6j64
+			</div>
+		</div>
+	</div>
+
+	
 	<script>
 		function waitMBx(){
 			console.log('waitMBx');
