--- a/test/index.html
+++ b/test/index.html
@@ -92,16 +92,16 @@
 	
 	<div id='menuPaneDiv1' class='menuPane'>
 		<div class='menuHead' onclick="MZXB.zInputDeviceHandler.processKeyB();">
-			header for return back action
+			<span id='menu1textHead'>header for return back action</span>
 		</div>
-		<div class='menuContent'>
-			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+		<div class='menuContent' id='menu1content'>
+			<div class='menuRow' id='menuRow1-0' onclick="MZXB.zInputDeviceHandler.processKeyA();">
 				1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
 			</div>
-			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+			<div class='menuRow' id='menuRow1-1' onclick="MZXB.zInputDeviceHandler.processKeyA();">
 				dthndrt jdtym dtym dtymdtym
 			</div>
-			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+			<div data-row-selection="yes" class='menuRow' id='menuRow1-2' onclick="MZXB.zInputDeviceHandler.processKeyA();">
 				sdsgn xsssrt saa aaa re
 			</div>
 		</div>
@@ -109,16 +109,16 @@
 
 	<div id='menuPaneDiv2' class='menuPane'>
 		<div class='menuHead' onclick="MZXB.zInputDeviceHandler.processKeyB();">
-			header for return back action
+			<span id='menu2textHead'>header for return back action</span>
 		</div>
-		<div class='menuContent'>
-			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+		<div class='menuContent' id='menu2content'>
+			<div class='menuRow' id='menuRow2-0' onclick="MZXB.zInputDeviceHandler.processKeyA();">
 				xnrndty mt mtym 
 			</div>
-			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+			<div class='menuRow' id='menuRow2-1' onclick="MZXB.zInputDeviceHandler.processKeyA();">
 				e6uj56eje56j56e w45mdtym
 			</div>
-			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+			<div class='menuRow' id='menuRow2-2' onclick="MZXB.zInputDeviceHandler.processKeyA();">
 				w4y4w6yu4ew6j6j64
 			</div>
 		</div>
@@ -126,16 +126,16 @@
 
 	<div id='menuPaneDiv3' class='menuPane'>
 		<div class='menuHead' onclick="MZXB.zInputDeviceHandler.processKeyB();">
-			header for return back action
+			<span id='menu3textHead'>header for return back action</span>
 		</div>
-		<div class='menuContent'>
-			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+		<div class='menuContent' id='menu3content'>
+			<div class='menuRow' id='menuRow3-0' onclick="MZXB.zInputDeviceHandler.processKeyA();">
 				xnrndty mt mtym 
 			</div>
-			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+			<div class='menuRow' id='menuRow3-1' onclick="MZXB.zInputDeviceHandler.processKeyA();">
 				e6uj56eje56j56e w45mdtym
 			</div>
-			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+			<div class='menuRow' id='menuRow3-2' onclick="MZXB.zInputDeviceHandler.processKeyA();">
 				w4y4w6yu4ew6j6j64
 			</div>
 		</div>
@@ -143,16 +143,16 @@
 
 	<div id='menuPaneDiv4' class='menuPane'>
 		<div class='menuHead' onclick="MZXB.zInputDeviceHandler.processKeyB();">
-			header for return back action
+			<span id='menu4textHead'>header for return back action</span>
 		</div>
-		<div class='menuContent'>
-			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+		<div class='menuContent' id='menu4content'>
+			<div class='menuRow' id='menuRow4-0' onclick="MZXB.zInputDeviceHandler.processKeyA();">
 				xnrndty mt mtym 
 			</div>
-			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+			<div class='menuRow' id='menuRow4-1' onclick="MZXB.zInputDeviceHandler.processKeyA();">
 				e6uj56eje56j56e w45mdtym
 			</div>
-			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+			<div class='menuRow' id='menuRow4-3' onclick="MZXB.zInputDeviceHandler.processKeyA();">
 				w4y4w6yu4ew6j6j64
 			</div>
 		</div>
@@ -160,16 +160,16 @@
 
 	<div id='menuPaneDiv5' class='menuPane'>
 		<div class='menuHead' onclick="MZXB.zInputDeviceHandler.processKeyB();">
-			header for return back action
+			<span id='menu5textHead'>header for return back action</span>
 		</div>
-		<div class='menuContent'>
-			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+		<div class='menuContent' id='menu5content'>
+			<div class='menuRow' id='menuRow5-0' onclick="MZXB.zInputDeviceHandler.processKeyA();">
 				xnrndty mt mtym 
 			</div>
-			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+			<div class='menuRow' id='menuRow5-1' onclick="MZXB.zInputDeviceHandler.processKeyA();">
 				e6uj56eje56j56e w45mdtym
 			</div>
-			<div class='menuRow' onclick="MZXB.zInputDeviceHandler.processKeyA();">
+			<div class='menuRow' id='menuRow5-1' onclick="MZXB.zInputDeviceHandler.processKeyA();">
 				w4y4w6yu4ew6j6j64
 			</div>
 		</div>
