--- a/test/index.html
+++ b/test/index.html
@@ -76,7 +76,7 @@
 	</div>
 -->
 	<div id='menuButtonDiv'>
-		<img id='menuButtonImage' src="resources/y_button.svg" onclick="MZXB.zInputDeviceHandler.processKeyY();" />
+		<img id='menuButtonImage' src="resources/y_button.svg" onclick="MZXB.zMainMenu.openNextLevel();" />
 		<!--
 		<img id='menuButtonImage' src="resources/x_button.svg" onclick="MZXB.zInputDeviceHandler.processKeyY();" />
 		<img id='menuButtonImage' src="resources/a_button.svg" onclick="MZXB.zInputDeviceHandler.processKeyY();" />
@@ -91,7 +91,7 @@
 	</div>
 	
 	<div id='menuPaneDiv1' class='menuPane'>
-		<div class='menuHead' onclick="MZXB.zInputDeviceHandler.processKeyB();">
+		<div class='menuHead' onclick="MZXB.zMainMenu.backPreLevel();">
 			<span id='menu1textHead'>header for return back action</span>
 		</div>
 		<div class='menuContent' id='menu1content'>
@@ -108,7 +108,7 @@
 	</div>
 
 	<div id='menuPaneDiv2' class='menuPane'>
-		<div class='menuHead' onclick="MZXB.zInputDeviceHandler.processKeyB();">
+		<div class='menuHead' onclick="MZXB.zMainMenu.backPreLevel();">
 			<span id='menu2textHead'>header for return back action</span>
 		</div>
 		<div class='menuContent' id='menu2content'>
@@ -125,7 +125,7 @@
 	</div>
 
 	<div id='menuPaneDiv3' class='menuPane'>
-		<div class='menuHead' onclick="MZXB.zInputDeviceHandler.processKeyB();">
+		<div class='menuHead' onclick="MZXB.zMainMenu.backPreLevel();">
 			<span id='menu3textHead'>header for return back action</span>
 		</div>
 		<div class='menuContent' id='menu3content'>
@@ -142,7 +142,7 @@
 	</div>
 
 	<div id='menuPaneDiv4' class='menuPane'>
-		<div class='menuHead' onclick="MZXB.zInputDeviceHandler.processKeyB();">
+		<div class='menuHead' onclick="MZXB.zMainMenu.backPreLevel();">
 			<span id='menu4textHead'>header for return back action</span>
 		</div>
 		<div class='menuContent' id='menu4content'>
@@ -159,7 +159,7 @@
 	</div>
 
 	<div id='menuPaneDiv5' class='menuPane'>
-		<div class='menuHead' onclick="MZXB.zInputDeviceHandler.processKeyB();">
+		<div class='menuHead' onclick="MZXB.zMainMenu.backPreLevel();">
 			<span id='menu5textHead'>header for return back action</span>
 		</div>
 		<div class='menuContent' id='menu5content'>
