--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,7 @@
 	-->
 	<svg id="contentSVG" class='contentSVG' viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"
 		xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
+		<g id='gridLayerGroup'></g>
 		<g id='bottomTimelineLayerGroup'></g>
 		<g id='measureOtherVoicesLayerGroup'></g>
 		<g id='measureSecondVoicesLayerGroup'></g>
