--- a/test/index.html
+++ b/test/index.html
@@ -26,6 +26,7 @@
 		<g id='measureOtherVoicesLayerGroup'></g>
 		<g id='measureSecondVoicesLayerGroup'></g>
 		<g id='measureMainVoiceLayerGroup'></g>
+		<g id='focusMarkerLayer'></g>
 		<g id='debugLayerGroup'></g>
 	</svg>
 	<!--
