--- a/test/index.html
+++ b/test/index.html
@@ -28,6 +28,7 @@
 
 	<svg id="contentSVG" class='contentSVG' viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
 		<g id='gridLayerGroup'></g>
+		<g id='leftKeysGroup'></g>
 		<g id='bottomTimelineLayerGroup'></g>
 		<g id='upperSelectionScale'></g>
 		<g id='measureOtherVoicesLayerGroup'></g>
