--- a/test/index.html
+++ b/test/index.html
@@ -3,10 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="initial-scale=1.0, width=device-width, height=device-height, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no" />
+	
 	<link rel="stylesheet" type="text/css" href="resources/vars.css">
 	<link rel="stylesheet" type="text/css" href="resources/font/font.css">
 	<link rel="stylesheet" type="text/css" href="resources/base.css">
 	<link rel="stylesheet" type="text/css" href="resources/menu.css">
+
+	<link rel="stylesheet" type="text/css" href="resources/screen_normal.css">
+	
 	<script type='text/javascript' src='./code/muzxbox.js'></script>
 	<title>MuzXBox</title>
 </head>
