--- a/test/index.html
+++ b/test/index.html
@@ -92,7 +92,7 @@
 
 	<script>
 		function waitMBx() {
-			console.log('waitMBx');
+			//console.log('waitMBx');
 			if (window['MZXB']) {
 				MZXB.initAll();
 			} else {
