--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,8 @@
 	<link rel="stylesheet" type="text/css" href="resources/screen_normal.css">
 	
 	<script type='text/javascript' src='./code/muzxbox.js'></script>
+	<script type='text/javascript' src='resources/WebAudioFontPlayer.js'></script>
+	
 	<title>MuzXBox</title>
 </head>
 
