--- a/test/resources/test/test749.html
+++ b/test/resources/test/test749.html
@@ -19,6 +19,11 @@
 		<button onclick='clickGoSkip(1);'>back 1</button>
 		<button onclick='clickGoSkip(5);'>back 5</button>
 		<button onclick='clickClearLines();'>clear</button>
+		<button onclick='setAvg(5);'>5</button>
+		<button onclick='setAvg(9);'>9</button>
+		<button onclick='setAvg(19);'>19</button>
+		<button onclick='setAvg(29);'>29</button>
+		<button onclick='setAvg(50);'>50</button>
 	</p>
 	<svg id='svgpane' width="1300" height="5000">
 		<rect width="1300" height="5000" rx="20" ry="20" fill="#eee" />
