--- a/test/resources/test/test749.html
+++ b/test/resources/test/test749.html
@@ -13,7 +13,7 @@
 <body>
 	<pre id='msgp'>tet749</pre>
 	<p>
-		<button onclick='clickRandomize();'>random</button>
+		<button onclick='clickHop();'>hop</button>
 		<button onclick='clickGoSkip(-5);'>forward 5</button>
 		<button onclick='clickGoSkip(-1);'>forward 1</button>
 		<button onclick='clickGoSkip(1);'>back 1</button>
@@ -24,6 +24,7 @@
 		<button onclick='setAvg(19);'>19</button>
 		<button onclick='setAvg(29);'>29</button>
 		<button onclick='setAvg(50);'>50</button>
+		<button onclick='randomizeCells();'>random</button>
 	</p>
 	<svg id='svgpane' width="1300" height="5000">
 		<rect width="1300" height="5000" rx="20" ry="20" fill="#eee" />
