--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -35,7 +35,12 @@
 	</svg>
 	<!--<script src="a749data.js"></script>-->
 	<script src="d645data.js"></script>
-	<script src="test645.js"></script>
+	<script>
+		let dataName = 'data645';
+		let rowLen = 45;
+		let ballsInRow = 6;
+	</script>
+	<script src="testCalc.js"></script>
 </body>
 
 </html>
