--- a/test/resources/test/test749.html
+++ b/test/resources/test/test749.html
@@ -33,9 +33,14 @@
 		<rect id="fogRect" x="0" y="0" width="1300" height="5000" onclick="clickFog(event);"/>
 		<rect id="lineMark" width="1" height="1" x="0" y="0" fill="#ff000099" />
 	</svg>
-	<!--<script src="a749data.js"></script>-->
-	<script src="d645data.js"></script>
-	<script src="test749.js"></script>
+	<script src="a749data.js"></script>
+	<!--<script src="d645data.js"></script>-->
+	<script>
+		let dataName = 'data749';
+		let rowLen = 49;
+		let ballsInRow = 7;
+	</script>
+	<script src="testCalc.js"></script>
 </body>
 
 </html>
