--- a/test/resources/test/test749.html
+++ b/test/resources/test/test749.html
@@ -24,6 +24,7 @@
 		<button onclick='changeWidth(-1);'>w-</button>
 		<button onclick='changeWidth(+1);'>+w</button>
 		<button onclick='randomizeCells();'>random</button>
+		<button onclick='toggleFirst();'>first</button>
 	</p>
 	<svg id='svgpane' width="1300" height="5000">
 		<rect width="1300" height="5000" rx="20" ry="20" fill="#eee" />
