--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -20,6 +20,7 @@
 		<button onclick='clickGoSkip(-1);'>forward 1</button>
 		<button onclick='clickGoSkip(1);'>back 1</button>
 		<button onclick='clickGoSkip(5);'>back 5</button>
+		<button onclick='toggleRatioPre();'>light</button>
 	</p>
 	<svg id='svgpane' width="1300" height="5000">
 		<rect width="1300" height="5000" rx="20" ry="20" fill="#eee" />
