--- a/test/resources/test/test749.html
+++ b/test/resources/test/test749.html
@@ -23,7 +23,7 @@
 		<button onclick='toggleRatioPre();'>light</button>
 	</p>
 	<svg id='svgpane' width="1300" height="5000">
-		<rect width="1300" height="5000" rx="20" ry="20" fill="#eee" />
+		<rect width="1300" height="5000" rx="20" ry="20" fill="#fff" />
 		<g id='levelA'></g>
 		<g id='linesLevel'></g>
 		<rect id="fogRect" x="0" y="0" width="1300" height="5000" onclick="clickFog(event);"/>
