--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -16,12 +16,16 @@
 		<button onclick='clickHop();'>hop</button>
 		<button onclick='toggleFirst();'>first</button>
 		<button onclick='clickClearLines();'>clear</button>
+		<button onclick='clickGoSkip(-100);'>forward 100</button>
 		<button onclick='clickGoSkip(-5);'>forward 5</button>
 		<button onclick='clickGoSkip(-1);'>forward 1</button>
 		<button onclick='clickGoSkip(1);'>back 1</button>
 		<button onclick='clickGoSkip(5);'>back 5</button>
+		<button onclick='clickGoSkip(100);'>back 100</button>
 		<button onclick='toggleRatioPre();'>light</button>
 		<button onclick='addTails();'>tail</button>
+		<button onclick='moreReduceRatio();'>+</button>
+		<button onclick='lessReduceRatio();'>-</button>
 	</p>
 	<svg id='svgpane' width="1300" height="5000">
 		<rect width="1300" height="5000" rx="20" ry="20" fill="#fff" />
