--- a/test/resources/test/test749.html
+++ b/test/resources/test/test749.html
@@ -22,8 +22,10 @@
 		<button onclick='clickGoSkip(5);'>back 5</button>
 		<button onclick='toggleRatioPre();'>light</button>
 		<button onclick='addTails();'>tail</button>
-		<button onclick='moreReduceRatio();'>+</button>
-		<button onclick='lessReduceRatio();'>-</button>
+	</p><p>
+		<button onclick='moreReduceRatio();'>+step</button>
+		<span id='stepsize'>+step</span>
+		<button onclick='lessReduceRatio();'>-step</button>
 	</p>
 	<svg id='svgpane' width="1300" height="5000">
 		<rect width="1300" height="5000" rx="20" ry="20" fill="#fff" />
