--- a/test/resources/test/test749.html
+++ b/test/resources/test/test749.html
@@ -7,6 +7,10 @@
 			fill: #ff000001;
 
 		}
+		button{
+			width:150px;
+			height:48px;
+		}
 	</style>
 </head>
 
@@ -42,6 +46,7 @@
 		let ballsInRow = 7;
 	</script>
 	<script src="testCalc.js"></script>
+
 </body>
 
 </html>
