--- a/test/resources/test/test749.html
+++ b/test/resources/test/test749.html
@@ -20,13 +20,16 @@
 		<button onclick='clickHop();'>hop</button>
 		<button onclick='toggleFirst();'>first</button>
 		<button onclick='clickClearLines();'>clear</button>
+	</p><p>
+		<button onclick='clickGoSkip(-100);'>forward 100</button>
 		<button onclick='clickGoSkip(-5);'>forward 5</button>
 		<button onclick='clickGoSkip(-1);'>forward 1</button>
 		<button onclick='clickGoSkip(1);'>back 1</button>
 		<button onclick='clickGoSkip(5);'>back 5</button>
+		<button onclick='clickGoSkip(100);'>back 100</button>
+	</p><p>
 		<button onclick='toggleRatioPre();'>light</button>
 		<button onclick='addTails();'>tail</button>
-	</p><p>
 		<button onclick='moreReduceRatio();'>+step</button>
 		<span id='stepsize'>+step</span>
 		<button onclick='lessReduceRatio();'>-step</button>
