--- a/test/resources/test/test749.html
+++ b/test/resources/test/test749.html
@@ -33,6 +33,9 @@
 		<button onclick='moreReduceRatio();'>+step</button>
 		<span id='stepsize'>+step</span>
 		<button onclick='lessReduceRatio();'>-step</button>
+		<button onclick='moreCalcLen();'>+len</button>
+		<span id='calcLen'>+len</span>
+		<button onclick='lessCalcLen();'>-len</button>
 	</p>
 	<svg id='svgpane' width="1300" height="5000">
 		<rect width="1300" height="5000" rx="20" ry="20" fill="#fff" />
