--- a/ts3/test/test.html
+++ b/ts3/test/test.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 
 	
-	<script type='text/javascript' src='./js/musicengine.js'></script>
+	<script type='text/javascript' src='../js/musicengine.js'></script>
 	
 	<title>SE</title>
 </head>
@@ -15,6 +15,7 @@
 	<script>
         var se=new SurikovEngine();
         console.log(se.version());
+		se.tester.startTest1();
 	</script>
 </body>
 
