--- a/project/web/testpage.html
+++ b/project/web/testpage.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <script type='text/javascript' src='../baseapplication/build/base.js'></script>
+	<script type='text/javascript' src='./plugins/catalog.js'></script>
+	<script type='text/javascript' src='./testschedule.js'></script>
     <title>MuzXbox</title>
 </head>
 
