--- a/project/web/testpage.html
+++ b/project/web/testpage.html
@@ -10,7 +10,9 @@
 
 <body>
     <p>MuzXbox test page</p>
+
     <p><button onclick='main.initFromUI();'>initFromUI</button></p>
+    <p><input type="file" id="filesinput" name="filesarr[]" />*.mid</p>
 	<p><button onclick='main.startTest();'>startTest</button></p>
     <script>
         console.log('init html');
