--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -8,26 +8,27 @@
 
 		}
 		button{
-			width:150px;
-			height:48px;
+			width:1.5cm;
+			height:1cm;
 		}
 	</style>
 </head>
 
 <body>
-	<pre id='msgp'>tet749</pre>
-	<p>
+<p>
+	<span id='msgp'>test</span>
+	
 		<button onclick='clickHop();'>hop</button>
 		<button onclick='toggleFirst();'>first</button>
 		<button onclick='clickClearLines();'>clear</button>
-	</p><p>
+	
 		<button onclick='clickGoSkip(-100);'>+100</button>
 		<button onclick='clickGoSkip(-5);'>+5</button>
 		<button onclick='clickGoSkip(-1);'>+1</button>
 		<button onclick='clickGoSkip(1);'>-1</button>
 		<button onclick='clickGoSkip(5);'>-5</button>
 		<button onclick='clickGoSkip(100);'>-100</button>
-	</p><p>
+	
 		<button onclick='toggleRatioPre();'>light</button>
 		<button onclick='addTails();'>tail</button>
 		<button onclick='moreReduceRatio();'>+step</button>
